Added applet version of script - easier to run.

--- a/Send Reading List to Instapaper/Send Reading List to Instapaper.scptd/Contents/Info.plist
+++ b/Send Reading List to Instapaper/Send Reading List to Instapaper.scptd/Contents/Info.plist
@@ -13,9 +13,9 @@
 		<key>positionOfDivider</key>
 		<real>591</real>
 		<key>savedFrame</key>
-		<string>17 55 932 1002 0 0 1920 1058 </string>
+		<string>17 56 932 1002 0 0 1920 1058 </string>
 		<key>selectedTabView</key>
-		<string>description</string>
+		<string>result</string>
 	</dict>
 </dict>
 </plist>
