Add Pocket python wrapper submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pocketlib"]
 	path = pocketlib
 	url = git@github.com:samuelkordik/pocketlib.git
+[submodule "pocket"]
+	path = pocket
+	url = https://github.com/tapanpandita/pocket.git
